# rust-ytdownloader

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
locales/: en.toml  ja.toml  ko.toml  zh-CN.toml
src/: config.rs  downloader.rs  initializer.rs  lib.rs  main.rs  playlist.rs
