[package]
name = "rust-ytdownloader"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
dirs = "5"
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17.1"
egui_extras = { version = "0.31", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["jpeg", "png", "webp"] }



[lib]
name = "rust_ytdownloader"
path = "src/lib.rs"
