[package]
name = "rust-ytdownloader"
version = "1.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
dirs = "5"
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17.1"
egui_extras = { version = "0.31", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["jpeg", "png", "webp", "ico"] }
backoff = "0.4"
toml = "0.8"
rust-i18n = "3"
sys-locale = "0.3"

[build-dependencies]
winres = "0.1"



[lib]
name = "rust_yt"
path = "src/lib.rs"
